@@ -1,3 +1,7 @@
+2011-01-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/__init__.py: Added new gconf key for rate of latest photos.
+
 2011-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* shotwell.py: Disable a ban icon on shotwell plugin by default.
